--- a/platforms/nuttx/src/px4/stm/stm32h7/adc/CMakeLists.txt
+++ b/platforms/nuttx/src/px4/stm/stm32h7/adc/CMakeLists.txt
@@ -1,6 +1,6 @@
 ############################################################################
 #
-#   Copyright (c) 2015 PX4 Development Team. All rights reserved.
+#   Copyright (c) 2015-2019 PX4 Development Team. All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions
@@ -30,12 +30,7 @@
 # POSSIBILITY OF SUCH DAMAGE.
 #
 ############################################################################
-px4_add_module(
-	MODULE modules__dataman
-	MAIN dataman
-	STACK_MAIN 1240
-	COMPILE_FLAGS
-		-Wno-cast-align # TODO: fix and enable
-	SRCS
-		dataman.cpp
-	)
+
+px4_add_library(arch_adc
+	adc.cpp
+)
