--- a/src/drivers/barometer/ms5611/CMakeLists.txt
+++ b/src/drivers/barometer/ms5611/CMakeLists.txt
@@ -37,9 +37,11 @@ px4_add_module(
 	COMPILE_FLAGS
 		-Wno-cast-align # TODO: fix and enable
 	SRCS
-		ms5611_spi.cpp
-		ms5611_i2c.cpp
-		ms5611.cpp
+		MS5611.cpp
+		MS5611_I2C.cpp
+		ms5611_main.cpp
+		MS5611_SPI.cpp
 	DEPENDS
+		drivers_barometer
 		px4_work_queue
 	)
